# ai-homework

./: README.md
task1/: README.md
task1/expense-calculator/: App.jsx  index.html  package-lock.json  package.json  styles.css  vite.config.js
task2/api-testing/: .flake8  README.md  pyproject.toml  pytest.ini  test_fakestore_api.py  test_products_api.py
task2/api-testing/tests/: test_products.py
task3/: README.md  schema.sql
task3/queries/: last_three_months_avg.sql  march_2024_sales.sql  top_customer.sql
